
var game_file_list = [
    //以下为自动修改，请勿修改
    //----auto game_file_list start----
	"libs/modules/egret/egret.js",
	"libs/modules/egret/egret.native.js",
	"libs/modules/game/game.js",
	"libs/modules/game/game.native.js",
	"libs/modules/res/res.js",
	"libs/modules/eui/eui.js",
	"libs/modules/tween/tween.js",
	"libs/modules/socket/socket.js",
	"libs/modules/protobuf/protobuf.js",
	"libs/modules/WeixinAPI/WeixinAPI.js",
	"bin-debug/LoadingUI.js",
	"bin-debug/Main.js",
	"bin-debug/chess/RoomTest.js",
	"bin-debug/chess/Startup.js",
	"bin-debug/core/mvc/proxy/BaseProxy.js",
	"bin-debug/chess/cmdListener/RoomNotifyCmdListener.js",
	"bin-debug/chess/components/Menu.js",
	"bin-debug/chess/components/puke/BasePukeItem.js",
	"bin-debug/chess/components/puke/PukeBar.js",
	"bin-debug/chess/components/puke/PukeItem.js",
	"bin-debug/chess/consts/Cmd.js",
	"bin-debug/chess/consts/ControllerConst.js",
	"bin-debug/chess/consts/Direction.js",
	"bin-debug/chess/consts/GamingStates.js",
	"bin-debug/chess/consts/HandCat.js",
	"bin-debug/chess/consts/HttpConst.js",
	"bin-debug/chess/consts/Msg.js",
	"bin-debug/chess/consts/NotifyConst.js",
	"bin-debug/chess/consts/NotifyType.js",
	"bin-debug/chess/consts/PlayerSeat.js",
	"bin-debug/chess/consts/ProtoConst.js",
	"bin-debug/chess/consts/RoomCloseReason.js",
	"bin-debug/chess/consts/RoundState.js",
	"bin-debug/chess/consts/SceneConsts.js",
	"bin-debug/chess/consts/ViewConst.js",
	"bin-debug/chess/data/GamingManager.js",
	"bin-debug/chess/data/MahjongManager.js",
	"bin-debug/chess/data/MainManager.js",
	"bin-debug/chess/data/ProtoManager.js",
	"bin-debug/chess/data/PukeManager.js",
	"bin-debug/chess/data/RoomManager.js",
	"bin-debug/chess/mahjong/BMahjongBar.js",
	"bin-debug/chess/mahjong/BaseMahjongItem.js",
	"bin-debug/chess/mahjong/MahjongItem.js",
	"bin-debug/chess/model/MahjongInfo.js",
	"bin-debug/chess/model/PlayerInfo.js",
	"bin-debug/chess/model/PukeInfo.js",
	"bin-debug/chess/model/UserInfo.js",
	"bin-debug/core/mvc/view/BaseEuiView.js",
	"bin-debug/chess/module/base/BaseModelView.js",
	"bin-debug/chess/module/base/BasePanelView.js",
	"bin-debug/chess/module/base/CommonPanelView.js",
	"bin-debug/chess/module/bet/BetConst.js",
	"bin-debug/core/mvc/controller/BaseController.js",
	"bin-debug/chess/module/bet/BetController.js",
	"bin-debug/chess/module/bet/BetEvent.js",
	"bin-debug/chess/module/bet/BetPanel.js",
	"bin-debug/chess/module/bet/BetProxy.js",
	"bin-debug/chess/module/bet/BetTile.js",
	"bin-debug/chess/module/chat/ChatConst.js",
	"bin-debug/chess/module/chat/ChatController.js",
	"bin-debug/chess/module/chat/ChatPopView.js",
	"bin-debug/chess/module/chat/ChatProxy.js",
	"bin-debug/chess/module/chat/MovieClip2.js",
	"bin-debug/chess/module/chat/components/ChatExpressions.js",
	"bin-debug/chess/module/chat/components/ChatHistories.js",
	"bin-debug/chess/module/chat/components/ChatMessages.js",
	"bin-debug/chess/module/chat/components/ExpressionItem.js",
	"bin-debug/chess/module/home/HomeConst.js",
	"bin-debug/chess/module/home/HomeController.js",
	"bin-debug/chess/module/home/HomeProxy.js",
	"bin-debug/chess/module/home/HomeView.js",
	"bin-debug/core/base/BaseClass.js",
	"bin-debug/chess/module/loading/EasyLoading.js",
	"bin-debug/chess/module/loading/LoadingConst.js",
	"bin-debug/chess/module/loading/LoadingController.js",
	"bin-debug/chess/module/loading/LoadingView.js",
	"bin-debug/chess/module/login/LoginConst.js",
	"bin-debug/chess/module/login/LoginController.js",
	"bin-debug/core/mvc/model/BaseModel.js",
	"bin-debug/chess/module/login/LoginModel.js",
	"bin-debug/chess/module/login/LoginProxy.js",
	"bin-debug/chess/module/login/LoginView.js",
	"bin-debug/chess/module/replyDismiss/ReplyDismissController.js",
	"bin-debug/chess/module/replyDismiss/ReplyDismissPanel.js",
	"bin-debug/chess/module/replyDismiss/ReplyDismissProxy.js",
	"bin-debug/chess/module/room/PlayersView.js",
	"bin-debug/chess/module/room/RoomConst.js",
	"bin-debug/chess/module/room/RoomController.js",
	"bin-debug/chess/module/room/RoomProxy.js",
	"bin-debug/chess/module/room/RoomUIView.js",
	"bin-debug/chess/module/room/RoomView.js",
	"bin-debug/chess/module/room/components/RoomSeatBar.js",
	"bin-debug/chess/module/room/components/RoomSeatItem.js",
	"bin-debug/chess/module/roomEnter/NumberInputView.js",
	"bin-debug/chess/module/roomEnter/RoomEnterController.js",
	"bin-debug/chess/module/roomEnter/RoomEnterPanel.js",
	"bin-debug/chess/module/roomEnter/RoomEnterProxy.js",
	"bin-debug/chess/module/servers/ServerChooseController.js",
	"bin-debug/chess/module/servers/ServerChooseView.js",
	"bin-debug/chess/module/servers/ServerItemRenderer.js",
	"bin-debug/chess/module/settlement/SettlementController.js",
	"bin-debug/chess/module/settlement/SettlementPanel.js",
	"bin-debug/chess/module/settlement/components/SettlementItem.js",
	"bin-debug/chess/module/settlement/components/SettlementList.js",
	"bin-debug/chess/module/tips/BaseTips.js",
	"bin-debug/chess/module/tips/CenterTips.js",
	"bin-debug/chess/module/tips/NormalTips.js",
	"bin-debug/chess/module/tips/TipsController.js",
	"bin-debug/core/scene/base/BaseScene.js",
	"bin-debug/chess/scene/EnterScene.js",
	"bin-debug/chess/scene/HomeScene.js",
	"bin-debug/core/scene/base/BaseSpriteLayer.js",
	"bin-debug/core/scene/base/BaseEuiLayer.js",
	"bin-debug/chess/scene/LayerManager.js",
	"bin-debug/chess/scene/LoadingScene.js",
	"bin-debug/chess/scene/RoomScene.js",
	"bin-debug/core/App.js",
	"bin-debug/core/adapter/AssetAdapter.js",
	"bin-debug/core/adapter/ThemeAdapter.js",
	"bin-debug/core/mvc/CtrlManager.js",
	"bin-debug/core/mvc/ViewManager.js",
	"bin-debug/core/mvc/view/BaseSpriteView.js",
	"bin-debug/core/mvc/view/IBaseView.js",
	"bin-debug/core/net/http/DataCache.js",
	"bin-debug/core/net/http/DataUpdate.js",
	"bin-debug/core/net/http/Http.js",
	"bin-debug/core/net/socket/BaseMsg.js",
	"bin-debug/core/net/socket/ByteArrayMsg.js",
	"bin-debug/core/net/socket/ByteArrayMsgByProtobuf.js",
	"bin-debug/core/net/socket/Socket.js",
	"bin-debug/core/net/socket/SocketConst.js",
	"bin-debug/core/net/socket/UTFMsg.js",
	"bin-debug/core/net/socket/UTFMsgByJson.js",
	"bin-debug/core/net/socket/error/ErrorInfo.js",
	"bin-debug/core/net/socket/error/ErrorConst.js",
	"bin-debug/core/scene/manager/SceneManager.js",
	"bin-debug/core/sound/BaseSound.js",
	"bin-debug/core/sound/SoundBg.js",
	"bin-debug/core/sound/SoundEffects.js",
	"bin-debug/core/sound/SoundManager.js",
	"bin-debug/core/utils/AverageUtils.js",
	"bin-debug/core/utils/DebugUtils.js",
	"bin-debug/core/utils/DeviceUtils.js",
	"bin-debug/core/utils/DisplayUtils.js",
	"bin-debug/core/utils/Log.js",
	"bin-debug/core/utils/MessageCenter.js",
	"bin-debug/core/utils/ObjectPool.js",
	"bin-debug/core/utils/ResVersionManager.js",
	"bin-debug/core/utils/ResourceUtils.js",
	"bin-debug/core/utils/StageUtils.js",
	"bin-debug/core/utils/TimerManager.js",
	"bin-debug/core/utils/TipsUtils.js",
	//----auto game_file_list end----
];

var window = this;

egret_native.setSearchPaths([""]);

egret_native.requireFiles = function () {
    for (var key in game_file_list) {
        var src = game_file_list[key];
        require(src);
    }
};

egret_native.egretInit = function () {
    if(egret_native.featureEnable) {
        //控制一些优化方案是否开启
        egret_native.featureEnable({
            
        });
    }
    egret_native.requireFiles();
    //egret.dom为空实现
    egret.dom = {};
    egret.dom.drawAsCanvas = function () {
    };
};

egret_native.egretStart = function () {
    var option = {
        //以下为自动修改，请勿修改
        //----auto option start----
		entryClassName: "Main",
		frameRate: 30,
		scaleMode: "showAll",
		contentWidth: 1335,
		contentHeight: 750,
		showPaintRect: false,
		showFPS: false,
		fpsStyles: "x:0,y:0,size:12,textColor:0xffffff,bgAlpha:0.9",
		showLog: false,
		logFilter: "",
		maxTouches: 2,
		textureScaleFactor: 1
		//----auto option end----
    };

    egret.native.NativePlayer.option = option;
    egret.runEgret();
    egret_native.Label.createLabel("/system/fonts/DroidSansFallback.ttf", 20, "", 0);
    egret_native.EGTView.preSetOffScreenBufferEnable(true);
};